CMAKE_MINIMUM_REQUIRED(VERSION 3.14)

SET(CMAKE_C_STANDARD 11)

ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/lfds711_btree_addonly_unbalanced)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/lfds711_freelist)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/lfds711_hash_addonly)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/lfds711_list_addonly_singlylinked_ordered)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/lfds711_list_addonly_singlylinked_unordered)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/lfds711_misc)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/lfds711_prng)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/lfds711_queue_bounded_manyproducer_manyconsumer)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/lfds711_queue_bounded_singleproducer_singleconsumer)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/lfds711_queue_unbounded_manyproducer_manyconsumer)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/lfds711_ringbuffer)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/lfds711_stack)
